--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -117,3 +117,6 @@ jobs:
     - name: Terraform Apply
       if: github.ref == 'refs/heads/master' && github.event_name == 'push'
       run: terraform apply -auto-approve
+    
+    - name: Terraform Destroy
+      run: terraform destroy -auto-approve
