--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -118,5 +118,5 @@ jobs:
       if: github.ref == 'refs/heads/master' && github.event_name == 'push'
       run: terraform apply -auto-approve
     
-    - name: Terraform Destroy
-      run: terraform destroy -auto-approve
+    #- name: Terraform Destroy
+     # run: terraform destroy -auto-approve
