--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,71 +1,16 @@
-# This workflow installs the latest version of Terraform CLI and configures the Terraform CLI configuration file
-# with an API token for Terraform Cloud (app.terraform.io). On pull request events, this workflow will run
-# `terraform init`, `terraform fmt`, and `terraform plan` (speculative plan via Terraform Cloud). On push events
-# to the master branch, `terraform apply` will be executed.
-#
-# Documentation for `hashicorp/setup-terraform` is located here: https://github.com/hashicorp/setup-terraform
-#
-# To use this workflow, you will need to complete the following setup steps.
-#
-# 1. Create a `main.tf` file in the root of this repository with the `remote` backend and one or more resources defined.
-#   Example `main.tf`:
-#     # The configuration for the `remote` backend.
-#     terraform {
-#       backend "remote" {
-#         # The name of your Terraform Cloud organization.
-#         organization = "example-organization"
-#
-#         # The name of the Terraform Cloud workspace to store Terraform state files in.
-#         workspaces {
-#           name = "example-workspace"
-#         }
-#       }
-#     }
-#
-#     # An example resource that does nothing.
-#     resource "null_resource" "example" {
-#       triggers = {
-#         value = "A example resource that does nothing!"
-#       }
-#     }
-#
-#
-# 2. Generate a Terraform Cloud user API token and store it as a GitHub secret (e.g. TF_API_TOKEN) on this repository.
-#   Documentation:
-#     - https://www.terraform.io/docs/cloud/users-teams-organizations/api-tokens.html
-#     - https://help.github.com/en/actions/configuring-and-managing-workflows/creating-and-storing-encrypted-secrets
-#
-# 3. Reference the GitHub secret in step using the `hashicorp/setup-terraform` GitHub Action.
-#   Example:
-#     - name: Setup Terraform
-#       uses: hashicorp/setup-terraform@v1
-#       with:
-#         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
-
-name: 'Terraform'
+name: Terraform CI/CD
 
 on:
   push:
-    branches:
-    - master
-  pull_request:
+    branches: [ main ]
 
 jobs:
-  terraform:
-    name: 'Terraform'
+
+  build:
     runs-on: ubuntu-latest
-    environment: production
-
-    # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
-    defaults:
-      run:
-        shell: bash
-
     steps:
-    # Checkout the repository to the GitHub Actions runner
-    - name: Checkout
+    - name: Checkout version 1
       uses: actions/checkout@v2
-      
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
     - name: Set up QEMU
@@ -89,58 +34,56 @@ jobs:
           arg2=value2
     - name: Image digest
       run: echo ${{ steps.docker_build.outputs.digest }}
-
-    # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v1
       with:
-        terraform_wrapper: false
+          terraform_version: 0.13.4
+          terraform_wrapper: false
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-2
-
-    # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
       run: terraform init
-
-    
-
-    # Generates an execution plan for Terraform
-    - name: Terraform Plan
-      run: terraform plan
-
-      # On push to master, build or change infrastructure according to Terraform configuration files
-      # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
-    - name: Terraform Apply  # name is a placeholder which will be displayed in github action console while running.
-      id: sam_apply
-      if: github.ref == 'refs/heads/master' && github.event_name == 'push'
-      #run: terraform apply -auto-approve # this will create the terraform instance and assigns the instance id to sam_apply variable
+    - name: Terraform Apply
+      id: apply
+      if: github.ref == 'refs/heads/main' && github.event_name == 'push'
       run: |
         terraform apply -auto-approve
-        sam_instanceid=$(terraform output ID)  #ID is defined in main.tf
-        echo "::set-output name=sam_instanceid::$sam_instanceid" # this line is required for the line 128 to work.
-        
+        instanceid=$(terraform output DNS)
+        echo "::set-output name=instanceid::$instanceid"
+    - name: Terrafrom Output
+      run: |
+        instanceid=$(terraform output DNS)
+        echo ${{ steps.apply.outputs.instanceid }}
+    - name: Print Output
+      env:
+        test_variable: $(terraform output DNS)
+      run: |
+        echo $(terraform output DNS)
+    # Instance Readiness wait
     - name: Instance Readiness Check
       run: |
-        echo "Instance ID ${{steps.sam_apply.outputs.sam_instanceid }}"
-        aws ec2 wait instance-status-ok --instance-ids ${{ steps.sam_apply.outputs.sam_instanceid }}
+        aws ec2 wait instance-status-ok --instance-ids ${{ steps.apply.outputs.instanceid }}
     # Configure aws-ssm to run the scripts from Actions
     - name: AWS SSM Rollout-Command
       uses: peterkimzz/aws-ssm-send-command@master
       id: ssm
       env:
-        AWS_INSTANCE_ID: ${{ steps.sam_apply.outputs.sam_instanceid }}
+        AWS_INSTANCE_ID: ${{ steps.apply.outputs.instanceid }}
       with:
         aws-region: us-east-2
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        instance-ids: ${{ steps.sam_apply.outputs.sam_instanceid }}
+        instance-ids: ${{ env.AWS_INSTANCE_ID }}
         working-directory: /home/ec2-user
-        command: "sudo docker stop $(sudo docker ps -q); sudo docker pull somestupiddocker/terraform-aws-ec2-docker:latest; sudo docker run -p 8080:8080 somestupiddocker/terraform-aws-ec2-docker:latest"
+        command: "sudo docker stop $(sudo docker ps -q); sudo docker pull nantha96/app:latest; sudo docker run -p 8080:8080 nantha96/app:latest"
         comment: Roll-out
+    # Catch SSM outputs
+    - name: Get the outputs
+      run: echo "The Command id is ${{ steps.ssm.outputs.command-id }}"
     
     #- name: Terraform Destroy
-     # run: terraform destroy -auto-approve
+    #  run: terraform destroy -auto-approve
