updated repo name

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -79,7 +79,7 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         instance-ids: ${{ env.AWS_INSTANCE_ID }}
         working-directory: /home/ec2-user
-        command: "sudo docker stop $(sudo docker ps -q); sudo docker pull nantha96/app:latest; sudo docker run -p 8080:8080 nantha96/app:latest"
+        command: "sudo docker stop $(sudo docker ps -q); sudo docker pull somestupiddocker/terraform-aws-ec2-docker:latest; sudo docker run -p 8080:8080 somestupiddocker/terraform-aws-ec2-docker:latest"
         comment: Roll-out
     # Catch SSM outputs
     - name: Get the outputs
