--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -68,7 +68,22 @@ jobs:
       run: |
         aws ec2 wait instance-status-ok --instance-ids ${{ steps.apply.outputs.instanceid }}
     # Configure aws-ssm to run the scripts from Actions
+    - name: AWS SSM Rollout-Command
+      uses: peterkimzz/aws-ssm-send-command@master
+      id: ssm
+      env:
+        AWS_INSTANCE_ID: ${{ steps.apply.outputs.instanceid }}
+      with:
+        aws-region: us-east-2
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        instance-ids: ${{ env.AWS_INSTANCE_ID }}
+        working-directory: /home/ec2-user
+        command: "sudo docker stop $(sudo docker ps -q); sudo docker pull somestupiddocker/terraform-aws-ec2-docker:latest; sudo docker run -p 8080:8080 somestupiddocker/terraform-aws-ec2-docker:latest"
+        comment: Roll-out
+    # Catch SSM outputs
+    - name: Get the outputs
+      run: echo "The Command id is ${{ steps.ssm.outputs.command-id }}"
     
-    
-    #- name: Terraform Destroy
-    #  run: terraform destroy -auto-approve
+    - name: Terraform Destroy
+      run: terraform destroy -auto-approve
